Regression: crash when render finishes #100049
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#100049
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 11 64-Bit
Graphics card: Nvidia RTX 3060Ti
Blender Version
Broken: 3.2.0, 08-Jun-2022 12:14 | 3.2.1, 06-Jul-2022 10:08
Worked: 3.1.2, 01-Apr-2022 08:16
Blender will crash when render in either Eevee or Cycles finishes. Render will continue, for example when samples are set at 9999, it will render all the way to 9999. But as soon as the render finishes, Blender will immediately crash and close.
I have tried deleting all object, changing rendering setting, samples. It looks like it's memory related, specifically a pointer problem as seen in the stack trace. This is the last thing called.
Freestyle::FEdgeInternal::SVertexIterator::operator*
Render according to log shows it finishes, but Freestyle is causing issue. Log files will be attached.
06_Aurora_blender32.blend
06_Aurora_blender32.crash.txt
Added subscriber: @kberes
Blender Crashes when render finishesto Blender Crashes when render finishes | 3.2 issue, 3.1 worked OKAdded subscribers: @iss, @deadpin
Changed status from 'Needs Triage' to: 'Confirmed'
Looks like
277fa2f441
accidentally broke the following code path:SEQ_channels_displayed_get(ed);
is called before checking for null a few lines later insideSEQ_get_topmost_sequence
CC @iss
Blender Crashes when render finishes | 3.2 issue, 3.1 worked OKto Regression: crash when render finishesThis issue was referenced by
cd80065686
This issue was referenced by
97b226ac51
Changed status from 'Confirmed' to: 'Resolved'