Fix T100049: Crash when render finishes

Caused by NULL dereference of `Editing` before NULL check was done.